코드 셀의 실행 카운트를 null로 변경하고, init_chat_model 호출 후에 빈 줄 추가. 불필요한 코드 셀 제거.

--- a/ch03/main.ipynb
+++ b/ch03/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb738da4",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,8 @@
     "model_name = os.getenv(\"LLM_MODEL\") or \"gpt-3.5-turbo\"\n",
     "model_provider = os.getenv(\"LLM_MODEL_PROVIDER\") or \"openai\"\n",
     "\n",
-    "llm = init_chat_model(model_name, model_provider=model_provider)\n"
+    "llm = init_chat_model(model_name, model_provider=model_provider)\n",
+    "\n"
    ]
   },
   {
@@ -78,14 +79,6 @@
     "# 프롬프트 템플릿 출력\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c576c4c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
